fixed vertical alignment of text in scoreboard slats

--- a/css/highfive.css
+++ b/css/highfive.css
@@ -61,6 +61,7 @@ li.contestant span {
 	float: right;
 	color: #F9F3A2;
 	text-transform: uppercase;
+	margin: 4px 0;
 }
 
 li.contestant span a {
